--- a/public/about.html
+++ b/public/about.html
@@ -19,13 +19,13 @@
     </header>
 </header>
   <main>
-    <h2>Our Mission</h2>
-    <p>Providing small investors and analysts with affordable access to real-time financial data.</p>
-    <h2>Our Solution</h2>
-    <p>Using APIs like Polygon to aggregate real-time stock data and display it visually for decision-making.</p>
+    <h2>Core Missions</h2>
+    <p>Giving a valuable resource for retail investors and analysts.</p>
+    <h2>How we solve it all</h2>
+    <p>Utilizing APIs like Polygon to aggregate real-time stock data and display it visually for decision-making.</p>
   </main>
   <footer>
-    <p>&copy; Financial Dashboard</p>
+    <p>&copy; Dashboard With Finances</p>
 </footer>
 </body>
 </html>
