--- a/public/home.html
+++ b/public/home.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Real-Time Financial Dashboard</h1>
+    <h1>Live financial Updates</h1>
   </header>
   <main>
-    <p>Your go-to platform for real-time financial data, empowering small investors and financial analysts to make informed decisions.</p>
+    <p>Your reliable financial platform to boost retail investors and Analysts</p>
     <div class="buttons">
       <a href="stocks.html" class="btn">Explore Stocks</a>
       <a href="about.html" class="btn">About Us</a>
@@ -19,7 +19,7 @@
   </main>
   <footer>
     <p>Providing data-driven insights for better financial decisions.</p>
-    <p>© 2024 Financial Dashboard</p>
+    <p>© 2025 Financial Dashboard</p>
   </footer>
   <script src="home_page.js"></script>
 </body>
